[gd_scene load_steps=4 format=2]

[ext_resource path="res://GameUI/HUD.tscn" type="PackedScene" id=1]
[ext_resource path="res://DemoVersion.gd" type="Script" id=2]
[ext_resource path="res://Levels/Level_1.tscn" type="PackedScene" id=3]

[node name="DemoVersion" type="Control"]
margin_right = 40.0
margin_bottom = 40.0
script = ExtResource( 2 )

[node name="StandardLevel" parent="." instance=ExtResource( 3 )]

[node name="CanvasModulate" type="CanvasModulate" parent="."]

[node name="HUDLayer" type="CanvasLayer" parent="."]

[node name="HUD" parent="HUDLayer" instance=ExtResource( 1 )]

[connection signal="player_hurt" from="StandardLevel" to="." method="_on_StandardLevel_player_hurt"]
[connection signal="pause" from="HUDLayer/HUD" to="." method="_on_HUD_pause"]
[connection signal="unpause" from="HUDLayer/HUD" to="." method="_on_HUD_unpause"]
[connection signal="upgraded" from="HUDLayer/HUD" to="." method="_on_HUD_upgraded"]
